パッケージ指定処理を削除